--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Monika-Mistry/Node-Assessment#readme",
   "dependencies": {
     "eslint": "^6.1.0",
+    "express": "^4.17.1",
     "mongoose": "^5.6.6"
   }
 }
