--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Monika-Mistry/Node-Assessment#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "eslint": "^6.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.6"
